[package]
name = "tower-sessions-cookie-store"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
time = { version = "0.3.44", features = ["serde"] }
tower-cookies = "0.11.0"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tower-sessions-core = "0.14.0"
tracing = "0.1.41"

[dev-dependencies]
axum = "0.8.1"
http-body-util = "0.1.3"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tower-sessions = { version = "0.14.0", features = ["axum-core", "memory-store", "signed", "private"] }

[features]
default = ["signed"]
signed = ["tower-cookies/signed"]
private = ["tower-cookies/private"]
dangerous-plaintext = []
