[package]
name = "tower-sessions-cookie-store"
version = "0.5.1"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Cookie-backed session store for tower-sessions (signed/private cookies via tower-cookies)"
repository = "https://github.com/benwilber/tower-sessions-cookie-store"
homepage = "https://github.com/benwilber/tower-sessions-cookie-store"
documentation = "https://docs.rs/tower-sessions-cookie-store"
keywords = ["tower", "axum", "session", "cookie", "middleware"]
categories = ["web-programming", "web-programming::http-server", "authentication"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
# NOTE: `tower-cookies` uses the `cookie` crate internally, but the latest crates.io release
# doesn't expose a `key-expansion` feature yet. We depend on `cookie` optionally so our
# `key-expansion` feature can enable `cookie/key-expansion` and make `Key::derive_from()` available.
cookie = { version = "0.18.1", optional = true, default-features = false }
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
time = { version = "0.3.44", features = ["serde"] }
tower-cookies = "0.11.0"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tower-sessions-core = "0.14.0"
tracing = "0.1.41"

[dev-dependencies]
axum = "0.8.1"
http-body-util = "0.1.3"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tower-sessions = { version = "0.14.0", features = ["axum-core", "memory-store", "signed", "private"] }

[features]
default = ["signed"]
signed = ["tower-cookies/signed"]
private = ["tower-cookies/private"]
key-expansion = ["dep:cookie", "cookie/key-expansion"]
dangerous-plaintext = []
